# Sisyphus

./: .gitignore  AGENTS.md  README.md  init-mcp.sh  pyproject.toml
benchmarks/tasks/: harness-fixtures.json
docs/: adaptive-planning-protocol.md  architecture.md  curated-evidence.md  dataset-export.md  episode-trace.md  feature-change-artifact.md  linkedin-weekly-main-summary-2026-04-17.md  mcp-clients.md  mobile-automation-spec.md  philosophy.md  reward-model.md  rl-action-space.md  runtime-relationship-diagrams.md  self-evolution-mcp-plan.md
docs/research/: harness-1-comparison.md  stateful-agent-harness.md
scripts/: run_sisyphus_mcp_server.py
src/sisyphus/: __init__.py  action_space.py  agent_runtime.py  agents.py  api.py  artifact_evaluator.py  artifact_projection.py  artifact_resources.py  artifact_snapshot.py  artifacts.py  audit.py  benchmark.py  bus_jsonl.py  cli.py  closeout.py  codex_prompt.py  config.py  conformance.py  context_pack.py  creation.py  daemon.py  dataset_export.py  (+36 more)
tests/: test_artifact_evaluator.py  test_artifact_projection.py  test_artifacts.py  test_benchmark.py  test_dataset_export.py  test_dsl.py  test_episode_trace.py  test_eval_loop.py  test_event_bus.py  test_evidence_graph.py  test_evolution.py  test_execution_policy.py  test_feature_change_dsl.py  test_golden.py  test_lifecycle_rules.py  test_mcp_adapter.py  test_mcp_bootstrap.py  test_mcp_core.py  test_mcp_launcher.py  test_mcp_server.py  test_promotion_naming.py  test_reward.py  test_search_context.py  test_sisyphus.py  test_taskflow.py  test_test_first.py  test_utils.py
(+563 files in other folders)
