[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskflow-kit"
version = "0.1.0"
description = "Shared git worktree task lifecycle utility"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
discord = ["discord.py>=2.4,<3"]

[project.scripts]
taskflow = "taskflow.cli:main"
sisyphus = "taskflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
taskflow = ["py.typed", "templates_data/*/*.md"]
